fix line overflow

--- a/story-maker/src/graph/graph.css
+++ b/story-maker/src/graph/graph.css
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+  overflow: visible;
 }
 
 .node {
